# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributedhardware/device_manager/device_manager.gni")

module_output_path = "device_manager/devicemanager"

ohos_benchmarktest("DeviceManagerTest") {
  module_out_path = module_output_path
  sources = [ "device_manager_test.cpp" ]

  include_dirs = [
    "${access_token_path}/nativetoken/include",
    "${access_token_path}/token_setproc/include",
    "${access_token_path}/accesstoken/include",
    "${common_path}/include",
    "${softbus_path}/interfaces/kits/common",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${access_token_path}/accesstoken:libaccesstoken_sdk",
    "${access_token_path}/nativetoken:libnativetoken",
    "${access_token_path}/token_setproc:libtoken_setproc",
    "${innerkits_path}/native_cpp:devicemanagersdk",
    "//third_party/benchmark:benchmark",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}

group("benchmarktest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":DeviceManagerTest",
  ]
}
