# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributedhardware/device_manager/device_manager.gni")

module_output_path = "device_manager/devicemanager"

ohos_benchmarktest("DeviceManagerTest") {
  module_out_path = module_output_path
  sources = [ "device_manager_test.cpp" ]

  include_dirs = [ "${common_path}/include" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [ "${innerkits_path}/native_cpp:devicemanagersdk" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "benchmark:benchmark",
    "bounds_checking_function:libsec_shared",
    "cJSON:cjson_static",
    "dsoftbus:softbus_client",
    "selinux_adapter:librestorecon",
  ]
}

group("benchmarktest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":DeviceManagerTest",
  ]
}
