# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/distributedhardware/device_manager/device_manager.gni")

##############################fuzztest##########################################
ohos_fuzztest("AuthenticateDeviceFuzzTest") {
  module_out_path = fuzz_test_output_path
  fuzz_config_file =
      "${devicemanager_path}/test/commonfuzztest/authenticatedevice_fuzzer"

  include_dirs = [
    "${common_path}/include",
    "${common_path}/include/ipc",
    "${common_path}/include/ipc/model",
    "${devicemanager_path}/interfaces/kits/js/include",
    "${devicemanager_path}/test/unittest/mock",
    "${innerkits_path}/native_cpp/include",
    "${innerkits_path}/native_cpp/include/ipc/standard",
    "${innerkits_path}/native_cpp/include/ipc",
    "${innerkits_path}/native_cpp/include/notify",
    "${utils_path}/include",
    "${utils_path}/include/crypto",
    "${utils_path}/include/ipc/standard",
    "${utils_path}/include/kvadapter",
    "${servicesimpl_path}/include",
    "${servicesimpl_path}/include/dependency/timer",
    "${servicesimpl_path}/include/discovery",
    "${servicesimpl_path}/include/dependency/softbus",
    "${servicesimpl_path}/include/authentication",
    "${servicesimpl_path}/include/adapter",
    "${servicesimpl_path}/include",
    "${servicesimpl_path}/include/ipc/standard",
    "${servicesimpl_path}/include/dependency/hichain",
    "${servicesimpl_path}/include/devicestate",
    "${servicesimpl_path}/include/ability",
    "${servicesimpl_path}/include/config",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Dprivate=public",
    "-Dprotected=public",
    "-Werror",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "authenticate_device_fuzzer.cpp" ]

  deps = [
    "${innerkits_path}/native_cpp:devicemanagersdk",
    "${utils_path}:devicemanagerutils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"AuthenticateDeviceFuzzTest\"",
    "LOG_DOMAIN=0xD004110",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "cJSON:cjson_static",
    "c_utils:utils",
    "device_auth:deviceauth_sdk",
    "ipc:ipc_single",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "selinux_adapter:librestorecon",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":AuthenticateDeviceFuzzTest" ]
}
###############################################################################
